# scdb

./: README.md  components.d.ts  index.html  package-lock.json  package.json  vite.config.ts
.fleet/: run.json
db/: scdb.sqlite
src/: App.vue  main.ts  router.ts  styles.css
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/db/: scdb.sqlite
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/dao/: mod.rs  prelude.rs
src-tauri/src/database/: mod.rs  pool.rs  prelude.rs
src-tauri/src/entity/: mod.rs  prelude.rs  t_course.rs  t_sc.rs  t_student.rs
src-tauri/src/handler/: mod.rs  prelude.rs  student_list.rs
src-tauri/tests/: db_test.rs  entity_test.rs
src/components/: CourseList.vue  Home.vue  NavBar.vue  QuerySC.vue  StudentList.vue  Update.vue
src/components/update/: UpdateCourse.vue  UpdateHome.vue  UpdateSC.vue  UpdateStudent.vue
