[package]
name = "scdb"
version = "0.0.1"
description = "数据库实验"
authors = ["kiritan"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "^1.17"
tokio = { version = "^1.28", features = ["full"] }
sea-orm = { version = "^0.11", features = [
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
    "macros",
] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
